HPA-34: don't fetch the headowner strings separately
The entity was fully fetched anyway, so it would only impact performance negatively to also fetch the headOwners separately